[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/gui/Hud.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/Theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.827451, 0.960784, 0.878431, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.827451, 0.905882, 0.960784, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.96, 0.90624, 0.8256, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Hud" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1054.0
margin_bottom = 580.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 2334.0
margin_bottom = 1300.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 2324.0
margin_bottom = 1290.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 2314.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 0

[node name="LeftPanels" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 240.0
margin_bottom = 100.0
mouse_filter = 2
custom_constants/separation = 0

[node name="HealthBar" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels"]
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
mouse_filter = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels/HealthBar"]
margin_right = 240.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels/HealthBar/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 238.0
margin_bottom = 38.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthLost" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels/HealthBar/MarginContainer/Control"]
unique_name_in_owner = true
margin_right = 236.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.21, 0.1624, 0.0672, 1 )

[node name="HealthRemaining" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels/HealthBar/MarginContainer/Control"]
unique_name_in_owner = true
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
color = Color( 0, 0.858824, 0.376471, 1 )

[node name="HydrationBarSpacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels"]
unique_name_in_owner = true
visible = false
margin_top = 40.0
margin_right = 240.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 4 )
mouse_filter = 2

[node name="HydrationBar" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels"]
unique_name_in_owner = true
visible = false
margin_top = 44.0
margin_right = 240.0
margin_bottom = 84.0
rect_min_size = Vector2( 240, 40 )
mouse_filter = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels/HydrationBar"]
margin_right = 240.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels/HydrationBar/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 238.0
margin_bottom = 38.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HydrationBackground" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels/HydrationBar/MarginContainer/Control"]
unique_name_in_owner = true
margin_right = 236.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.0509804, 0.168627, 1 )

[node name="HydrationProgress" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanels/HydrationBar/MarginContainer/Control"]
unique_name_in_owner = true
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
color = Color( 0.109804, 0.584314, 1, 1 )

[node name="MiddleSpacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 2154.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="RightPanels" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 2154.0
margin_right = 2314.0
margin_bottom = 100.0
mouse_filter = 2
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels"]
margin_right = 160.0
margin_bottom = 68.0
rect_min_size = Vector2( 160, 0 )
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer"]
margin_right = 160.0
margin_bottom = 68.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 14
custom_constants/margin_top = 6
custom_constants/margin_left = 14
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer"]
margin_left = 14.0
margin_top = 6.0
margin_right = 146.0
margin_bottom = 62.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 132.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 26.0
text = "Score:"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 120.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 120.0
margin_right = 132.0
margin_bottom = 26.0
text = "0"
align = 2

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 132.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 4 )
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 132.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 54.0
margin_bottom = 26.0
text = "Wave:"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 120.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Waves" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 120.0
margin_right = 132.0
margin_bottom = 26.0
text = "0"
align = 2

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 132.0
margin_bottom = 56.0
mouse_filter = 2

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels"]
margin_top = 68.0
margin_right = 160.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 8 )
mouse_filter = 2

[node name="WaveCooldown" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 160.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 24 )
mouse_filter = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/WaveCooldown"]
margin_right = 160.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/WaveCooldown/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 158.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WaveCooldownBackground" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/WaveCooldown/MarginContainer/Control"]
unique_name_in_owner = true
margin_right = 156.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.0509804, 0.168627, 1 )

[node name="WaveCooldownProgress" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanels/WaveCooldown/MarginContainer/Control"]
unique_name_in_owner = true
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
color = Color( 0.964706, 0.407843, 0.105882, 1 )

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 2314.0
margin_bottom = 1280.0
mouse_filter = 2
size_flags_vertical = 3
